[fix] complete picklist overflow

--- a/static/tenda/css/main.css
+++ b/static/tenda/css/main.css
@@ -11,7 +11,7 @@ div.container {
 	height: 100%;
 }
 div.content-wrapper {
-	height: 100%;
+	/*height: 100%;*/
 	display: flex;
 	flex-direction: column;
 	padding: 1rem 1.5rem;
@@ -93,14 +93,11 @@ div.content-wrapper {
 	background-color: rgba(0, 0, 0, 0.25);
 }
 .modal-content {
-	/*border: 1px solid black;*/ 
 	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	background-color: white;
+	left: 12%;
 	padding: 1rem 1.5rem;
 	background-color: #fff;
+	margin: 3em auto;
 }
 
 .show-modal {
@@ -250,6 +247,13 @@ table th, td {
 }
 table tbody tr:hover {
 	background-color: #f0faff;
+}
+div.complete-fd table tbody tr td:first-child {
+	font-weight: bold;
+}
+div.table-wrapper,
+div#dbtable_container {
+	height: 100vh;
 }
 div#dbtable_container {
 	margin: 2.3em 0;
